<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorBlue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back_downloaded"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:src="@drawable/ic_back"
            android:tint="@color/colorWhite" />

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/downloaded"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/ll_empty_file"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_file"
                android:textColor="@color/colorBlack"></TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/folder">

            </ImageView>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_main"
            android:layout_above="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.gms.ads.AdView

            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"

            android:layout_margin="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ads_banner">

        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</LinearLayout>