<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/google_sans_medium"
                android:gravity="center"
                android:lines="3"
                android:maxLines="1"
                android:text="@string/rate_app_text"
                android:textColor="@color/colorBlack">


            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_cancel_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_cancel_two"
                    android:text="@string/cancel"
                    android:textColor="@color/colorWhite"></Button>

                <Button
                    android:id="@+id/btn_ok_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/custom_ok_two"
                    android:text="@string/ok"
                    android:textColor="@color/colorWhite"></Button>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>