<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlue"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_option"

                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/ic_option"
                android:tint="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_download_intent"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="Music Downloader"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_downloaded"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/ic_downloaded" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue">

            <RelativeLayout
                android:id="@+id/rl_search_song"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_ll_download"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edt_link"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/hint_search"
                    android:paddingLeft="20dp"
                    android:singleLine="true" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_search_ic"
                    android:tint="@color/colorBlue" />

            </RelativeLayout>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/het_key"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp">

                    <include layout="@layout/item_sugesstion_tag" />
                </LinearLayout>
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/hot_songs"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold">

                </TextView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lv_hot_songs"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>